--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
                 <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
               </form>         
           </nav>
-        <div class="container">
-            <div class="row">
-              <div class="col-sm">
+          <div class="d-flex flex-row bd-highlight mb-3">
+            <div class="p-2 bd-highlight">
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
                       <h5 class="card-title">
@@ -39,6 +38,7 @@
                     </div>
                   </div>
                   <br/>
+                  <!--LISTA-->
                   <ul class="list-group">
                     <li class="list-group-item">
                         <article class="media">
@@ -134,17 +134,96 @@
                             </div>
                         </article>
                     </li>
-                    <li class="list-group-item">And a fifth one</li>
+                    <li class="list-group-item">
+                        <article class="media">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 16">
+                                <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                              </svg>
+                            <div class="media-body">
+                            <a href="" class="text-dark">Contact</a>
+                            </div>
+                        </article>
+                    </li>
                   </ul>
-              </div>
-              <div class="col-sm">
-                One of three columns
-              </div>
-              <div class="col-sm">
-                One of three columns
-              </div>
+                  <br/>
+                  <!--LISTA OTHER-->
+                  <ul class="list-group">
+                    <p>Other</p>
+                    <li class="list-group-item">
+                        <article class="media">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-hand-thumbs-up-fill" viewBox="0 0 16 16">
+                                <path d="M6.956 1.745C7.021.81 7.908.087 8.864.325l.261.066c.463.116.874.456 1.012.965.22.816.533 2.511.062 4.51a9.84 9.84 0 0 1 .443-.051c.713-.065 1.669-.072 2.516.21.518.173.994.681 1.2 1.273.184.532.16 1.162-.234 1.733.058.119.103.242.138.363.077.27.113.567.113.856 0 .289-.036.586-.113.856-.039.135-.09.273-.16.404.169.387.107.819-.003 1.148a3.163 3.163 0 0 1-.488.901c.054.152.076.312.076.465 0 .305-.089.625-.253.912C13.1 15.522 12.437 16 11.5 16H8c-.605 0-1.07-.081-1.466-.218a4.82 4.82 0 0 1-.97-.484l-.048-.03c-.504-.307-.999-.609-2.068-.722C2.682 14.464 2 13.846 2 13V9c0-.85.685-1.432 1.357-1.615.849-.232 1.574-.787 2.132-1.41.56-.627.914-1.28 1.039-1.639.199-.575.356-1.539.428-2.59z"></path>
+                              </svg>
+                            <div class="media-body">
+                            <a href="" class="text-dark">Code of Conduct</a>
+                            </div>
+                        </article>
+                    </li>
+                    <li class="list-group-item">
+                        <article class="media">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-emoji-sunglasses" viewBox="0 0 16 16">
+                                <path d="M4.968 9.75a.5.5 0 1 0-.866.5A4.498 4.498 0 0 0 8 12.5a4.5 4.5 0 0 0 3.898-2.25.5.5 0 1 0-.866-.5A3.498 3.498 0 0 1 8 11.5a3.498 3.498 0 0 1-3.032-1.75zM7 5.116V5a1 1 0 0 0-1-1H3.28a1 1 0 0 0-.97 1.243l.311 1.242A2 2 0 0 0 4.561 8H5a2 2 0 0 0 1.994-1.839A2.99 2.99 0 0 1 8 6c.393 0 .74.064 1.006.161A2 2 0 0 0 11 8h.438a2 2 0 0 0 1.94-1.515l.311-1.242A1 1 0 0 0 12.72 4H10a1 1 0 0 0-1 1v.116A4.22 4.22 0 0 0 8 5c-.35 0-.69.04-1 .116z"/>
+                                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-1 0A7 7 0 1 0 1 8a7 7 0 0 0 14 0z"/>
+                              </svg>
+                            <div class="media-body">
+                            <a href="" class="text-dark">Privacy Policy</a>
+                            </div>
+                        </article>
+                    </li>
+                    <li class="list-group-item">
+                        <article class="media">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eyeglasses" viewBox="0 0 16 16">
+                                <path d="M4 6a2 2 0 1 1 0 4 2 2 0 0 1 0-4zm2.625.547a3 3 0 0 0-5.584.953H.5a.5.5 0 0 0 0 1h.541A3 3 0 0 0 7 8a1 1 0 0 1 2 0 3 3 0 0 0 5.959.5h.541a.5.5 0 0 0 0-1h-.541a3 3 0 0 0-5.584-.953A1.993 1.993 0 0 0 8 6c-.532 0-1.016.208-1.375.547zM14 8a2 2 0 1 1-4 0 2 2 0 0 1 4 0z"/>
+                              </svg>
+                            <div class="media-body">
+                            <a href="" class="text-dark">Terms of use</a>
+                            </div>
+                        </article>
+                    </li>
+                  </ul>
+                  <!--Publicidad-->
+                  <br />
+                  <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <a href="">Get Your Stickers!</a>
+                    </div>
+                  </div>
+                  <!--Ultima Card-->
+                  <br />
+                  <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p>
+                        DEV runs on 100% open source code known as<a href="">Forem.</a> 
+
+                        Contribute to the codebase or host your own!
+                      </p>
+                      <p>
+                        Check these out!
+                      </p>
+                      <ul>
+                          <li><a href="">Main Forem Repo</a></li>
+                          <li><a href="">Self-Host Instructions</a></li>
+                      </ul>
+                    </div>
+                  </div>
             </div>
-          </div>   
+            <div class="p-2 bd-highlight">
+                <ul class="nav">
+                    <li class="nav-item">
+                      <a class="nav-link active text-dark" href="#">Relevant</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-dark" href="#">Lastest</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-dark" href="#">Top</a>
+                    </li>    
+                  </ul>
+            </div>
+            <div class="p-2 bd-highlight">Flex item 3</div>
+          </div>
     </main>
     
       
