Se agregan cambios

--- a/index.html
+++ b/index.html
@@ -227,9 +227,10 @@
                     </div>
                   </div>
             </div>
+            <!--Segunda celda-->
             <div class="p-2 bd-highlight">
                 <!--Barra Nav-->
-                <ul class="nav">
+                <ul class="nav ">
                     <li class="nav-item">
                       <a class="nav-link active text-dark" href="#">Relevant</a>
                     </li>
@@ -309,23 +310,49 @@
             <!--Ultima celda de la lista-->
             <div class="p-2 bd-highlight">
               <!--Lista de links-->
-              <article class="list-group">
+              <article class="list-group w-50">
                 <section class="d-flex flex-row justify-content-between">
                   <p>Listings</p>
                   <a href="">See all</a>
-                </section>
-                
-                <a href="#" class="list-group-item list-group-item-action border-white" aria-current="true">
-                  Speak at FutureStack 2022!
-                  <br/>
-                  cfp
-                </a>
-                <a href="#" class="list-group-item list-group-item-action border-white">A second link item</a>
-                <a href="#" class="list-group-item list-group-item-action border-white">A third link item</a>
-                <a href="#" class="list-group-item list-group-item-action border-white">A fourth link item</a>
-                <a class="list-group-item list-group-item-action"></a>
-                
+                </section>      
+                <a href="#" class="list-group-item list-group-item-action border-white">Speak at FutureStack 2022!<br/>cfp</a>
+                <a href="#" class="list-group-item list-group-item-action border-white">How to grow & promote organically yout NFT proyect 🚀 <br/>education</a>
+                <a href="#" class="list-group-item list-group-item-action border-white">Free course: 6-figure Contractor Masterclass<br/></a>
+                <a href="#" class="list-group-item list-group-item-action border-white">Ebook: How to build a serverless app plataform on Kunbernetes 🔥 🚀 <br/>forsale</a>
+                <a href="#" class="list-group-item list-group-item-action border-white">🔥Nebula Graph Community Meeting 🔥 <br/>forsale</a>
+                <a href="#" class="list-group-item list-group-item-action border-white"><p class="text-center">Create a Listing</p></a>
               </article>
+              <br/>
+              <section class="list-group w-50">
+                <a href="#" class="text-dark"><strong>#news</strong></a>
+                <a href="#" class="list-group-item list-group-item-action border-white">Chatbots Could Help Mitigate Eating Disorders, Retro Slavic Adventure Games, & more on DevNews 🗞 <br/><mark>New</mark></a>
+                <a href="#" class="list-group-item list-group-item-action border-white">Whats new in Chrome 98 DevTools<br/><mark>New</mark></a>
+                <a href="#" class="list-group-item list-group-item-action border-white">Distributed Q&A for developers<br/><small>3 comments</small></a>
+                <a href="#" class="list-group-item list-group-item-action border-white">URLRealm - Link Shortner.<br/><small>3 comments</small></a>
+                <a href="#" class="list-group-item list-group-item-action border-white">  How to expose your open source project<br/><mark>New</mark></a>
+              </section>
+              <br/>
+              <section class="list-group w-50">
+                <a href="#" class="text-dark"><strong>#help</strong></a>
+                <a href="#" class="list-group-item list-group-item-action border-white">Need Help!! How to submit a form and receive the form data in email like - in gmail ?<br/><mark>New</mark></a>
+                <a href="#" class="list-group-item list-group-item-action border-white">  Why won't my XFCE4 log-in script work?<br/><small>1 comments</small></a>
+              </section>
+              <section class="list-group w-50">
+                <a href="#" class="text-dark"><strong>#discuss</strong></a>
+                <a href="#" class="list-group-item list-group-item-action border-white">What's the most fun you've ever had coding?<br/><small>18 comments</small></a>
+                <a href="#" class="list-group-item list-group-item-action border-white">Knowing I'm Dumb Is the First Step<br/><small>1 comments</small></a>
+                <a href="#" class="list-group-item list-group-item-action border-white">Google alternatives?<br/><small>16 comments</small></a>
+                <a href="#" class="list-group-item list-group-item-action border-white">What's your favorite Git tool?<br/><small>16 comments</small></a>
+                <a href="#" class="list-group-item list-group-item-action border-white">Comparing The 3 Types of App Development: No-Code vs Low-Code vs Full Code<br/><mark>New</mark></a>
+              </section>
+              <section class="list-group w-50">
+                <a href="#" class="text-dark"><strong>#explainlikeimfive</strong></a>
+                <a href="#" class="list-group-item list-group-item-action border-white">Unicorns on DEV 🦄🦄<br/><small>4 comments</small></a>
+                <a href="#" class="list-group-item list-group-item-action border-white">Please explain why I need software architecture<br/><small>25 comments</small></a>
+                <a href="#" class="list-group-item list-group-item-action border-white">Explain ReasonML Like I'm Five<br/><small>3 comments</small></a>
+                <a href="#" class="list-group-item list-group-item-action border-white">ELI5: Functions vs. Class/Constructor in Javascript<br/><small>10 comments</small></a>
+                <a href="#" class="list-group-item list-group-item-action border-white">Why do people write "window." in front of some things and not others?<br/><small>5 comments</small></a>
+              </section>
             </div>
           </div>
     </main>
