--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
-<body>
+<body class="bg-light ">
     <main >
       <!--Nav bar principal-->
-        <nav class="navbar navbar navbar-light bg-light fixed-top d-flex justify-content-around">
+        <nav class="navbar navbar navbar-light bg-white fixed-top d-flex justify-content-around">
             <form class="form-inline">
                 <a class="navbar-brand" href="#">
                     <img src="https://dev-to-uploads.s3.amazonaws.com/uploads/logos/resized_logo_UQww2soKuUsjaOGNB38o.png" width="30" height="30" alt="">
@@ -21,21 +22,21 @@
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
               </form>
               <form class="form-inline">
-                <button type="button" class="btn btn-light">Light</button>
+                <button type="button" class="btn btn-light">Log in</button>
                 <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
               </form>         
           </nav>
           <!--Flex principal-->
-          <div class="d-flex flex-row bd-highlight mb-3 justify-content-center" style="margin-top: 80px;">
+          <div class="d-flex  bd-highlight" style="margin-top: 80px;">
             <div class="p-2 bd-highlight">
-                <div class="card" style="width: 18rem;">
+                  <div class="card" style="width: 18rem;">
                     <div class="card-body">
                       <h5 class="card-title">
                           <a href="">Dev Community</a> is a community of 788,722 amazing developers
                       </h5>               
                       <p class="card-text text-muted">We're a place where coders share, stay up-to-date and grow their careers.</p>
-                      <button type="button" class="btn btn-outline-primary">Create account</button><br/>
-                      <button type="button" class="btn btn-outline-light text-dark">Light</button>
+                      <button type="button" class="btn btn-outline-primary align-self-center">Create account</button><br/>
+                      <button type="button" class="btn btn-outline-light text-dark align-self-center">Log in</button>
                     </div>
                   </div>
                   <br/>
@@ -228,7 +229,7 @@
                   </div>
             </div>
             <!--Segunda celda-->
-            <div class="p-2 bd-highlight">
+            <div class="bd-highlight">
                 <!--Barra Nav-->
                 <ul class="nav ">
                     <li class="nav-item">
@@ -242,70 +243,106 @@
                     </li>    
                   </ul>
                   <!--Cards Scroll infinito-->
-                  <div class="card mb-3">
-                    <img src="..." class="card-img-top" alt="...">
-                    <article class="card-body">
-                      <h5 class="card-title">Madza</h5>
-                      <a href="" class="text-dark">
-                          <h1>
-                            17 Killer Web Apps You Should Use to Increase Productivity
-                          </h1>
-                        </a>
-                      <!--Reacciones-->
-                      <article class="d-flex bd-highlight">
-                        <div class="p-2 flex-grow-1 bd-highlight">
-                            <a href="">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                                    <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-                                  </svg>
-                                  1177 reactions
-                            </a>
-                        </div>
-                        <div class="p-2 flex-grow-1 bd-highlight">
-                            <a href="">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
-                                    <path d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
-                                  </svg>
-                                  67 comments
-                            </a>
-                        </div>
-                        <div class="p-2 bd-highlight"><p class="card-text"><small class="text-muted">4 min read</small></p></div>
-                        <div class="p-2 bd-highlight"><button type="button" class="btn btn-light">Save</button></div>
+                  <section class="">
+                    <a href="" class="imgPost"></a>
+                    <div class="cardPost mb-3" style="height: 231px;">
+                      <article class="card-body">
+                        <h5 class="card-title">Madza</h5>
+                        <a href="" class="text-dark">
+                            <h4 class="font-weight-bold">
+                              17 Killer Web Apps You Should Use to Increase Productivity
+                            </h4>
+                          </a>
+                        <!--Reacciones-->
+                        <article class="d-flex align-items-center bd-highlight">
+                          <div class="p-2 flex-grow-1 bd-highlight">
+                              <a href="">
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                                      <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+                                    </svg>
+                                    1177 reactions
+                              </a>
+                          </div>
+                          <div class="p-2 flex-grow-1 bd-highlight">
+                              <a href="">
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
+                                      <path d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
+                                    </svg>
+                                    67 comments
+                              </a>
+                          </div>
+                          <div class="p-2 bd-highlight"><p class="card-text"><small class="text-muted">4 min read</small></p></div>
+                          <div class="p-2 bd-highlight"><button type="button" class="btn btn-light">Save</button></div>
+                        </article>
                       </article>
-                    </article>
-                  </div>
-                  <!--Segunda Carta-->
-                  <div class="card mb-3">
-                    <article class="card-body">
-                      <h5 class="card-title text-muted">Ben Halperm</h5>
-                      <a href="" class="text-dark">
-                          <h1>
-                            What's the most fun you've ever had coding?
-                          </h1>
-                        </a>
-                      <!--Botones-->
-                      <article class="d-flex bd-highlight">
-                        <div class="p-2 flex-grow-1 bd-highlight">
-                            <a href="">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                                    <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-                                  </svg>
-                                  1177 reactions
-                            </a>
-                        </div>
-                        <div class="p-2 flex-grow-1 bd-highlight">
-                            <a href="">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
-                                    <path d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
-                                  </svg>
-                                  67 comments
-                            </a>
-                        </div>
-                        <div class="p-2 bd-highlight"><p class="card-text"><small class="text-muted">1 min read</small></p></div>
-                        <div class="p-2 bd-highlight"><button type="button" class="btn btn-light">Save</button></div>
+                    </div>
+                    <!--Segunda Carta-->
+                    <div class="card mb-3">
+                      <article class="card-body">
+                        <h5 class="card-title text-muted">Ben Halperm</h5>
+                        <a href="" class="text-dark">
+                            <h4 class="font-weight-bold">
+                              What's the most fun you've ever had coding?
+                            </h4>
+                          </a>
+                        <!--Botones-->
+                        <article class="d-flex align-items-center bd-highlight">
+                          <div class="p-2 flex-grow-1 bd-highlight">
+                              <a href="">
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                                      <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+                                    </svg>
+                                    1177 reactions
+                              </a>
+                          </div>
+                          <div class="p-2 flex-grow-1 bd-highlight">
+                              <a href="">
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
+                                      <path d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
+                                    </svg>
+                                    67 comments
+                              </a>
+                          </div>
+                          <div class="p-2 bd-highlight"><p class="card-text"><small class="text-muted">1 min read</small></p></div>
+                          <div class="p-2 bd-highlight"><button type="button" class="btn btn-light">Save</button></div>
+                        </article>
                       </article>
-                    </article>
-                  </div>
+                    </div>
+  
+                    <!--Tercera Carta-->
+                    <div class="card mb-3">
+                      <article class="card-body">
+                        <h5 class="card-title text-muted">Ben Halperm</h5>
+                        <a href="" class="text-dark ">
+                            <h4 class="font-weight-bold">
+                              What's the most fun you've ever had coding?
+                            </h4>
+                          </a>
+                        <!--Botones-->
+                        <article class="d-flex align-items-center bd-highlight">
+                          <div class="p-2 flex-grow-1 bd-highlight">
+                              <a href="">
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                                      <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+                                    </svg>
+                                    1177 reactions
+                              </a>
+                          </div>
+                          <div class="p-2 flex-grow-1 bd-highlight">
+                              <a href="">
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
+                                      <path d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
+                                    </svg>
+                                    67 comments
+                              </a>
+                          </div>
+                          <div class="p-2 bd-highlight"><p class="card-text"><small class="text-muted">1 min read</small></p></div>
+                          <div class="p-2 bd-highlight"><button type="button" class="btn btn-light">Save</button></div>
+                        </article>
+                      </article>
+                    </div>
+                  </section>
+                  
             </div>
             <!--Ultima celda de la lista-->
             <div class="p-2 bd-highlight">
