--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               </form>         
           </nav>
           <!--Flex principal-->
-          <div class="d-flex  bd-highlight" style="margin-top: 80px;">
+          <div class="d-flex justify-content-center bd-highlight" style="margin-top: 80px;">
             <div class="p-2 bd-highlight">
                   <div class="card" style="width: 18rem;">
                     <div class="card-body">
@@ -386,15 +386,18 @@
                         </section>
                       </article>  
                     </div> 
-              <section class="d-flex flex-column  mb-3">
-                <div class="d-flex flex-row bd-highlight mb-3">
-                  <article class="p-2 bd-highlight">Img</article>
-                  <article class="p-2 bd-highlight">
-                    <div>DEV Community is a community of 801,259 amazing developers</div>
-                    <div>We're a place where coders share, stay up-to-date and grow their careers.</div>
+              <section class="d-flex flex-column mb-3" style="width: 676.266px">
+                <div class="d-flex flex-row bd-highlight mb-2">
+                  <article class="imgDev mr-4"></article>
+                  <article class="">
+                    <div class=""><p class="font-weight-bold mb-0 h3"><a href="" >DEV Community</a>  is a community of 801,259 amazing developers</p></div>
+                    <div><small>We're a place where coders share, stay up-to-date and grow their careers.</small> </div>
                   </article>
                 </div>
-                <div class="p-2 ">Flex item 2</div>
+                <div class="d-flex flex-column mt-2">
+                  <div class="align-self-center"><button type="button" class="btn btn-primary btn-sm">Create account</button></div>
+                  <div class="align-self-center"><button type="button" class="btn btn-link">Log in</button></div>
+                </div>
 
               </section>    
                   
